force-app/main/default/objects/Research_Proposal__c/fields/Discussed_with_Legal__c.field-meta.xml
<CustomField>
    <fullName>Discussed_with_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field must be set true to submit a research proposal.</inlineHelpText>
    <label>Discussed with Legal</label>
    <type>Checkbox</type>
</CustomField>