force-app/main/default/objects/Research_Proposal__c/fields/In_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Review</label>
    <type>Checkbox</type>
</CustomField>