force-app/main/default/objects/Research_Proposal__c/fields/Time_to_Implement_Est__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Implement_Est__c</fullName>
    <label>Time to Implement - Est</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>1-2 Years</fullName>
            </value>
            <value>
                <fullName>2-5 Years</fullName>
            </value>
            <value>
                <fullName>5+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>