force-app/main/default/objects/Research_Proposal__c/listViews/Proposals_In_Review.listView-meta.xml
<ListView>
    <fullName>Proposals_In_Review</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Discussed_with_Legal__c</columns>
    <columns>In_Review__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Proposals In Review</label>
</ListView>